--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -264,6 +264,7 @@ transform: rotate(45deg);
       }
       @include w924 () {
         font-size: 3rem;
+        text-shadow: 1px 1px 1px black;
       }
       @include w720 () {
         font-size: 2.5rem;
