Se agrega link a grupo

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,39 @@ h4 {
   background: #fff;
 }
 
+.btn-wsp2 {
+  position: fixed;
+  width: 55px;
+  height: 55px;
+  line-height: 61px;
+  bottom: 100px;
+  right: 30px;
+  background-image: url("../img/imagen-grupo-radio.png");
+  background-position: center;
+  background-size: cover;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 1.875rem;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+  z-index: 100;
+}
+@media (max-width: 600px) {
+  .btn-wsp2 {
+    font-size: 1.3rem;
+    bottom: 90px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    line-height: 43px;
+  }
+}
+
+.btn-wsp2:hover {
+  filter: brightness(104%);
+  text-decoration: none;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
+}
+
 .card, .card--9, .card--8, .card--7, .card--6, .card--5, .card--4, .card--3, .card--2 {
   width: 252px;
   height: auto;
