--- a/css/styles.css
+++ b/css/styles.css
@@ -106,11 +106,11 @@ h4 {
   right: 30px;
   background-image: url("../img/imagen-grupo-radio.png");
   background-position: center;
-  background-size: cover;
+  background-size: 70px 63px;
   border-radius: 50px;
   text-align: center;
   font-size: 1.875rem;
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
   z-index: 100;
 }
 @media (max-width: 600px) {
@@ -127,7 +127,7 @@ h4 {
 .btn-wsp2:hover {
   filter: brightness(104%);
   text-decoration: none;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
 }
 
 .card, .card--9, .card--8, .card--7, .card--6, .card--5, .card--4, .card--3, .card--2 {
