--- a/css/styles.css
+++ b/css/styles.css
@@ -1146,7 +1146,8 @@ h4 {
 }
 .about__cont-btn-texto span .backgr22 {
   font-style: normal;
-  padding: 0 0.2rem 0.3rem 0.2rem;
+  padding: 0 0.2rem 0.25rem 0.2rem;
+  color: hsl(194, 100%, 33%);
   background-color: hsl(29, 97%, 86%);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -1731,15 +1732,15 @@ h4 {
 }
 .fotos__item p {
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.6705882353);
-  color: #3b3b3b;
+  color: #2e2e2e;
   font-size: 1.3rem;
   max-width: 300px;
   opacity: 0;
   transition: opacity 1s ease-in;
   margin: 0 0 20px 20px;
-  background-color: rgba(255, 255, 255, 0.7254901961);
+  background-color: rgba(255, 255, 255, 0.4117647059);
   padding: 5px;
-  box-shadow: 0 0 5px 15px rgba(255, 255, 255, 0.7254901961);
+  box-shadow: 0 0 5px 15px rgba(255, 255, 255, 0.4117647059);
   line-height: 1.35;
   border-radius: 5px;
 }
@@ -1775,7 +1776,7 @@ h4 {
   border-radius: 10px;
 }
 .fotos__item p .colo {
-  color: #383d6e;
+  color: #181c48;
   font-size: 1.1rem;
   letter-spacing: 0.5px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
