se pone letra negra en comentarios de foto

--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1240,8 +1240,8 @@ transform: rotate(45deg);
           min-width: 300px;
         }
         p {
-      text-shadow: 0 0 5px #000000e5;
-      color: #efefef;
+      text-shadow: 0 0 1px #ffffff85;
+      color: #2e2e2e;
       font-size: 1.3rem;
       max-width: 300px;
       font-weight: 600;
