--- a/css/styles.css
+++ b/css/styles.css
@@ -664,7 +664,6 @@ h4 {
   align-self: end;
   color: rgba(0, 0, 0, 0.4666666667);
   font-size: 1.5rem;
-  font-family: "Noto Sans JP", sans-serif;
   font-weight: 700;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1647058824);
 }
@@ -720,8 +719,7 @@ h4 {
   font-weight: 300;
   color: rgba(77, 77, 77, 0.8980392157);
   font-style: italic;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1647058824);
-  font-family: "Indie Flower", cursive;
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.5098039216);
   letter-spacing: 5px;
 }
 @media (max-width: 1638px) {
