--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -319,7 +319,7 @@ transform: rotate(45deg);
       align-self: end;
       color: #00000077;
       font-size: 1.5rem;
-      font-family: 'Noto Sans JP', sans-serif;
+      
       font-weight: 700;
       text-shadow: 1px 1px 1px #0000002a;
       @include w1638 () {
@@ -362,8 +362,8 @@ transform: rotate(45deg);
     font-weight: 300;
     color: #4d4d4de5;
     font-style: italic;
-    text-shadow: 1px 1px 3px #0000002a;
-    font-family: 'Indie Flower', cursive;
+    text-shadow: 0 0 3px #00000082;
+
     letter-spacing: 5px;
     @include w1638 () {
       font-size: 1.8rem;
