Se cambia tipo en portada y seccion fotos

--- a/css/styles.css
+++ b/css/styles.css
@@ -720,7 +720,7 @@ h4 {
   color: rgba(77, 77, 77, 0.8980392157);
   font-style: italic;
   text-shadow: 0 0 3px rgba(0, 0, 0, 0.5098039216);
-  letter-spacing: 5px;
+  letter-spacing: 3px;
 }
 @media (max-width: 1638px) {
   .portada__frase {
@@ -1411,9 +1411,8 @@ h4 {
   font-weight: 300;
   color: rgba(77, 77, 77, 0.8980392157);
   font-style: italic;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1647058824);
-  font-family: "Indie Flower", cursive;
-  letter-spacing: 5px;
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.2156862745);
+  letter-spacing: 2px;
   border-left: 2.3px solid;
   padding-left: 15px;
   border-image: linear-gradient(to bottom, transparent 6%, rgba(0, 0, 0, 0.479) 6%, transparent);
@@ -1454,9 +1453,8 @@ h4 {
   font-weight: 300;
   color: rgba(77, 77, 77, 0.8980392157);
   font-style: italic;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1647058824);
-  font-family: "Indie Flower", cursive;
-  letter-spacing: 5px;
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.2156862745);
+  letter-spacing: 3px;
   border-right: 2.3px solid;
   border-image: linear-gradient(to bottom, transparent 6%, rgba(0, 0, 0, 0.479) 6%, transparent);
   border-image-slice: 1;
