--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -363,8 +363,7 @@ transform: rotate(45deg);
     color: #4d4d4de5;
     font-style: italic;
     text-shadow: 0 0 3px #00000082;
-
-    letter-spacing: 5px;
+    letter-spacing: 3px;
     @include w1638 () {
       font-size: 1.8rem;
     }
@@ -980,9 +979,8 @@ transform: rotate(45deg);
     font-weight: 300;
     color: #4d4d4de5;
     font-style: italic;
-    text-shadow: 1px 1px 2px #0000002a;
-    font-family: 'Indie Flower', cursive;
-    letter-spacing: 5px;
+    text-shadow: 0 0 3px #00000037;
+    letter-spacing: 2px;
     border-left: 2.3px solid;
     padding-left: 15px;
     border-image: linear-gradient(to bottom, transparent 6% , rgba(0, 0, 0, 0.479) 6%, transparent);
@@ -1017,9 +1015,8 @@ transform: rotate(45deg);
     font-weight: 300;
     color: #4d4d4de5;
     font-style: italic;
-    text-shadow: 1px 1px 2px #0000002a;
-    font-family: 'Indie Flower', cursive;
-    letter-spacing: 5px;
+    text-shadow: 0 0 3px #00000037;
+    letter-spacing: 3px;
     border-right: 2.3px solid;
     border-image: linear-gradient(to bottom, transparent 6% , rgba(0, 0, 0, 0.479) 6%, transparent);
     border-image-slice: 1;
